<resources>
    <string name="app_name">Contatos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="name">Nome</string>
    <string name="lastname">Sobrenome</string>
    <string name="type_prompt">Selecione o tipo do telefone</string>
    <string-array name="type_array">
        <item>Celular</item>
        <item>Fixo</item>
    </string-array>
    <string name="number">Número</string>
    <string name="back">Voltar</string>

</resources>